[gd_scene load_steps=25 format=2]

[ext_resource path="res://objektid/ram.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://objektid/Checkpoint_red1.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Background/taust_elementidega.png" type="Texture" id=4]
[ext_resource path="res://src/Levels/Fall_Checkpoint_1.gd" type="Script" id=5]
[ext_resource path="res://objektid/Must_pind.tscn" type="PackedScene" id=6]
[ext_resource path="res://objektid/vent.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Background/taust_elementideta_2CLEAN.png" type="Texture" id=8]
[ext_resource path="res://src/Levels/Level1.gd" type="Script" id=9]
[ext_resource path="res://objektid/Checkpoint_red3.tscn" type="PackedScene" id=10]
[ext_resource path="res://objektid/Checkpoint_red2.tscn" type="PackedScene" id=11]
[ext_resource path="res://objektid/Checkpoint_green1.tscn" type="PackedScene" id=12]
[ext_resource path="res://objektid/Checkpoint_green2.tscn" type="PackedScene" id=13]
[ext_resource path="res://objektid/Checkpoint_green3.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/taust3.wav" type="AudioStream" id=15]
[ext_resource path="res://objektid/CD.tscn" type="PackedScene" id=16]
[ext_resource path="res://objektid/Vaike_vent.tscn" type="PackedScene" id=17]
[ext_resource path="res://Vastane_Punane.tscn" type="PackedScene" id=18]
[ext_resource path="res://Vastane_Roheline.tscn" type="PackedScene" id=19]
[ext_resource path="res://objektid/animVent.tscn" type="PackedScene" id=20]
[ext_resource path="res://objektid/Checkpoint_green4.tscn" type="PackedScene" id=21]
[ext_resource path="res://objektid/Checkpoint_red4.tscn" type="PackedScene" id=22]
[ext_resource path="res://objektid/Checkpoint_red5.tscn" type="PackedScene" id=23]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7761.66, 6.36108 )

[node name="Level1" type="Node2D"]
position = Vector2( 1, -1 )
script = ExtResource( 9 )
player = ExtResource( 2 )

[node name="Taust" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Taust_Clean_1" type="Sprite" parent="Taust"]
position = Vector2( 959, 541 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Taust_Clean_2" type="Sprite" parent="Taust"]
position = Vector2( 2879, 541 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Taust_Clean_3" type="Sprite" parent="Taust"]
position = Vector2( 4799, 541 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Taust_Clean_4" type="Sprite" parent="Taust"]
position = Vector2( 6719, 541 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Taust_Clean_5" type="Sprite" parent="Taust"]
position = Vector2( 8639, 541 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Taust_Clean_7" type="Sprite" parent="Taust"]
position = Vector2( 12479, 541 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Taust_Clean_6" type="Sprite" parent="Taust"]
position = Vector2( 10559, 541 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Taust_Clean_8" type="Sprite" parent="Taust"]
position = Vector2( 14399, 541 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pind" type="Node2D" parent="."]
position = Vector2( 3697, 688 )
scale = Vector2( 0.144, 0.126 )
__meta__ = {
"_edit_lock_": true
}

[node name="Must_pind1" parent="Pind" instance=ExtResource( 6 )]
position = Vector2( -24166.7, 1396.83 )
scale = Vector2( 3.39583, 5.5873 )

[node name="Must_pind2" parent="Pind" instance=ExtResource( 6 )]
position = Vector2( -13791.7, 1412.7 )
scale = Vector2( 5.17361, 5.74603 )

[node name="Must_pind3" parent="Pind" instance=ExtResource( 6 )]
position = Vector2( -1513.89, 1404.76 )
scale = Vector2( 7.47222, 5.73016 )

[node name="Must_pind4" parent="Pind" instance=ExtResource( 6 )]
position = Vector2( 12000, 1412.7 )
scale = Vector2( 7.96528, 5.73016 )

[node name="Must_pind5" parent="Pind" instance=ExtResource( 6 )]
position = Vector2( 26083.3, 1412.7 )
scale = Vector2( 4.22917, 5.73016 )

[node name="Must_pind6" parent="Pind" instance=ExtResource( 6 )]
position = Vector2( 32875, 1420.63 )
scale = Vector2( 4.22917, 5.73016 )

[node name="Must_pind7" parent="Pind" instance=ExtResource( 6 )]
position = Vector2( 42194.4, 1428.57 )
scale = Vector2( 2.50694, 5.73016 )

[node name="Must_pind8" parent="Pind" instance=ExtResource( 6 )]
position = Vector2( 52854.2, 1420.63 )
scale = Vector2( 8.40972, 5.73016 )

[node name="Must_pind9" parent="Pind" instance=ExtResource( 6 )]
position = Vector2( 70805.6, 1428.57 )
scale = Vector2( 12.1806, 5.73016 )

[node name="Must_pind10" parent="Pind" instance=ExtResource( 6 )]
position = Vector2( 79965.3, 1420.63 )
scale = Vector2( 2.25694, 5.73016 )

[node name="Ram" type="Node2D" parent="."]
position = Vector2( 701, 729 )
scale = Vector2( 0.39, 0.391 )
__meta__ = {
"_edit_lock_": true
}

[node name="ram1" parent="Ram" instance=ExtResource( 1 )]

[node name="ram2" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 1041.03, -363.171 )

[node name="ram3" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 3738.46, -524.297 )

[node name="ram4" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 5048.72, -483.376 )

[node name="ram5" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 9038.46, 107.417 )

[node name="ram6" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 10143.6, -81.8414 )

[node name="ram7" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 13991, 9.93301 )

[node name="ram8" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 15042.9, -260.531 )

[node name="ram9" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 16125.6, -145.78 )

[node name="ram10" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 18561.5, -51.1509 )

[node name="ram11" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 21174.4, -455.243 )

[node name="ram12" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 22223.1, -48.5934 )

[node name="ram13" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 24243.6, -355.499 )

[node name="ram14" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 25223.1, -92.0717 )

[node name="ram15" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 28730.8, -301.79 )

[node name="ram16" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 29879.5, -662.404 )

[node name="ram17" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 31071.8, -419.437 )

[node name="ram18" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 35371.8, -790.281 )

[node name="ram19" parent="Ram" instance=ExtResource( 1 )]
position = Vector2( 36520.5, -401.535 )

[node name="Animated_CD" type="Node2D" parent="."]
position = Vector2( 1645.3, 204.62 )
scale = Vector2( 0.418745, 0.420926 )
__meta__ = {
"_edit_lock_": true
}

[node name="CD1" parent="Animated_CD" instance=ExtResource( 16 )]
position = Vector2( 17450.6, 1444.61 )
scale = Vector2( 2.38809, 2.37571 )

[node name="CD2" parent="Animated_CD" instance=ExtResource( 16 )]
position = Vector2( 25167, 1521.22 )
scale = Vector2( 2.38809, 2.37571 )

[node name="CD3" parent="Animated_CD" instance=ExtResource( 16 )]
position = Vector2( 26698.8, 1518.87 )
scale = Vector2( 2.38809, 2.37571 )

[node name="CD4" parent="Animated_CD" instance=ExtResource( 16 )]
position = Vector2( 1699.35, 1427.27 )
scale = Vector2( 2.38809, 2.37571 )

[node name="Animated_Vent_Suur" type="Node2D" parent="."]
position = Vector2( 1645.3, 204.62 )
scale = Vector2( 0.418745, 0.420926 )

[node name="Anim_Vent_Suur_1" parent="Animated_Vent_Suur" instance=ExtResource( 20 )]
position = Vector2( 196.539, 1203.63 )

[node name="Anim_Vent_Suur_2" parent="Animated_Vent_Suur" instance=ExtResource( 20 )]
position = Vector2( 3496.36, 683.608 )

[node name="Anim_Vent_Suur_3" parent="Animated_Vent_Suur" instance=ExtResource( 20 )]
position = Vector2( 4025.35, 1207.77 )

[node name="Anim_Vent_Suur_4" parent="Animated_Vent_Suur" instance=ExtResource( 20 )]
position = Vector2( 9304.88, 1202.88 )

[node name="Anim_Vent_Suur_5" parent="Animated_Vent_Suur" instance=ExtResource( 20 )]
position = Vector2( 22490.6, 1205.79 )

[node name="Anim_Vent_Suur_6" parent="Animated_Vent_Suur" instance=ExtResource( 20 )]
position = Vector2( 29334, 1207.93 )

[node name="Anim_Vent_Suur_7" parent="Animated_Vent_Suur" instance=ExtResource( 20 )]
position = Vector2( 29863.9, 1207.78 )

[node name="Suur_Vent" type="Node2D" parent="."]
position = Vector2( 1728, 713 )
scale = Vector2( 0.418745, 0.420926 )
__meta__ = {
"_edit_lock_": true
}

[node name="Vent_1" parent="Suur_Vent" instance=ExtResource( 7 )]
position = Vector2( 27.6743, 1222.32 )

[node name="Vent_2" parent="Suur_Vent" instance=ExtResource( 7 )]
position = Vector2( 3297.95, 0 )

[node name="Vent_3" parent="Suur_Vent" instance=ExtResource( 7 )]
position = Vector2( 3249.81, 1220.18 )

[node name="Vent_4" parent="Suur_Vent" instance=ExtResource( 7 )]
position = Vector2( 3923.74, 1258.65 )

[node name="Vent_5" parent="Suur_Vent" instance=ExtResource( 7 )]
position = Vector2( 9148.15, 1298.78 )

[node name="Vent_6" parent="Suur_Vent" instance=ExtResource( 7 )]
position = Vector2( 16394.2, 2.37573 )

[node name="Vent_7" parent="Suur_Vent" instance=ExtResource( 7 )]
position = Vector2( 22232.3, 1284.31 )

[node name="Vent_8" parent="Suur_Vent" instance=ExtResource( 7 )]
position = Vector2( 27694.7, 2.37573 )

[node name="Vent_9" parent="Suur_Vent" instance=ExtResource( 7 )]
position = Vector2( 29086.8, 1298.46 )

[node name="Vent_10" parent="Suur_Vent" instance=ExtResource( 7 )]
position = Vector2( 30067.4, 1253.82 )

[node name="Vaike_Vent" type="Node2D" parent="."]
position = Vector2( 683, 651 )
scale = Vector2( 0.045, 0.045 )

[node name="Vaike_Vent_1" parent="Vaike_Vent" instance=ExtResource( 17 )]
position = Vector2( 19644.5, 2577.78 )
scale = Vector2( 9.30545, 9.35391 )

[node name="Vaike_Vent_2" parent="Vaike_Vent" instance=ExtResource( 17 )]
position = Vector2( 27000, 2555.56 )
scale = Vector2( 9.30545, 9.35391 )

[node name="Vaike_Vent_3" parent="Vaike_Vent" instance=ExtResource( 17 )]
position = Vector2( 104400, 2555.56 )
scale = Vector2( 9.30544, 9.35391 )

[node name="Vaike_Vent_4" parent="Vaike_Vent" instance=ExtResource( 17 )]
position = Vector2( 149237, 2555.56 )
scale = Vector2( 9.30544, 9.35391 )

[node name="Vaike_Vent_5" parent="Vaike_Vent" instance=ExtResource( 17 )]
position = Vector2( 172156, 2577.78 )
scale = Vector2( 9.30544, 9.35391 )

[node name="Vaike_Vent_6" parent="Vaike_Vent" instance=ExtResource( 17 )]
position = Vector2( 204423, 2577.78 )
scale = Vector2( 9.30544, 9.35391 )

[node name="Vaike_Vent_7" parent="Vaike_Vent" instance=ExtResource( 17 )]
position = Vector2( 227111, 2600 )
scale = Vector2( 9.30544, 9.35391 )

[node name="Vaike_Vent_8" parent="Vaike_Vent" instance=ExtResource( 17 )]
position = Vector2( 243578, 2577.78 )
scale = Vector2( 9.30544, 9.35391 )

[node name="Vaike_Vent_9" parent="Vaike_Vent" instance=ExtResource( 17 )]
position = Vector2( 277444, 2600 )
scale = Vector2( 9.30544, 9.35391 )

[node name="Vaike_Vent_10" parent="Vaike_Vent" instance=ExtResource( 17 )]
position = Vector2( 290805, 2606.71 )
scale = Vector2( 9.30544, 9.35391 )

[node name="Vaike_Vent_11" parent="Vaike_Vent" instance=ExtResource( 17 )]
position = Vector2( 303071, 2623.86 )
scale = Vector2( 9.30544, 9.35391 )

[node name="Vaike_Vent_12" parent="Vaike_Vent" instance=ExtResource( 17 )]
position = Vector2( 295689, -2311.12 )
scale = Vector2( 9.30544, 9.35391 )

[node name="Vaike_Vent_13" parent="Vaike_Vent" instance=ExtResource( 17 )]
position = Vector2( 298155, -2311.12 )
scale = Vector2( 9.30544, 9.35391 )

[node name="Vaike_Vent_14" parent="Vaike_Vent" instance=ExtResource( 17 )]
position = Vector2( 296867, -4777.78 )
scale = Vector2( 9.30544, 9.35391 )

[node name="Vastased_Punane" type="Node2D" parent="."]
position = Vector2( 683, 651 )
scale = Vector2( 0.045, 0.045 )
__meta__ = {
"_edit_lock_": true
}

[node name="Vastane_Punane1" parent="Vastased_Punane" instance=ExtResource( 18 )]
scale = Vector2( 1, 1 )

[node name="Vastane_Punane2" parent="Vastased_Punane" instance=ExtResource( 18 )]
position = Vector2( 7466.67, -3088.89 )
scale = Vector2( 1, 1 )

[node name="Vastane_Punane3" parent="Vastased_Punane" instance=ExtResource( 18 )]
position = Vector2( 33133.3, -4533.33 )
scale = Vector2( 1, 1 )

[node name="Vastane_Punane4" parent="Vastased_Punane" instance=ExtResource( 18 )]
position = Vector2( 44222.2, -4222.22 )
scale = Vector2( 1, 1 )

[node name="Vastane_Punane5" parent="Vastased_Punane" instance=ExtResource( 18 )]
position = Vector2( 78866.7, 933.333 )
scale = Vector2( 1, 1 )

[node name="Vastane_Punane6" parent="Vastased_Punane" instance=ExtResource( 18 )]
position = Vector2( 89333.3, -755.556 )
scale = Vector2( 1, 1 )

[node name="Vastane_Punane7" parent="Vastased_Punane" instance=ExtResource( 18 )]
position = Vector2( 99622.2, 2711.11 )
scale = Vector2( 1, 1 )

[node name="Vastane_Punane8" parent="Vastased_Punane" instance=ExtResource( 18 )]
position = Vector2( 121856, 236.297 )
scale = Vector2( 1, 1 )

[node name="Vastane_Punane9" parent="Vastased_Punane" instance=ExtResource( 18 )]
position = Vector2( 130783, -2132.94 )
scale = Vector2( 1, 1 )

[node name="Vastane_Punane10" parent="Vastased_Punane" instance=ExtResource( 18 )]
position = Vector2( 140848, -1187.89 )
scale = Vector2( 1, 1 )

[node name="Vastane_Punane11" parent="Vastased_Punane" instance=ExtResource( 18 )]
position = Vector2( 153014, 2938.41 )
scale = Vector2( 1, 1 )

[node name="Vastane_Punane12" parent="Vastased_Punane" instance=ExtResource( 18 )]
position = Vector2( 161489, -666.667 )
scale = Vector2( 1, 1 )

[node name="Vastased_Roheline" type="Node2D" parent="."]
position = Vector2( 14967, 486 )
scale = Vector2( 0.045, 0.045 )

[node name="Vastane_Roheline1" parent="Vastased_Roheline" instance=ExtResource( 19 )]
position = Vector2( -250.406, 103.853 )
scale = Vector2( 1, 1 )

[node name="Vastane_Roheline2" parent="Vastased_Roheline" instance=ExtResource( 19 )]
position = Vector2( -9944.59, -3279.01 )
scale = Vector2( 1, 1 )

[node name="Vastane_Roheline3" parent="Vastased_Roheline" instance=ExtResource( 19 )]
position = Vector2( -7218.13, 6566.64 )
scale = Vector2( 1, 1 )

[node name="Vastane_Roheline4" parent="Vastased_Roheline" instance=ExtResource( 19 )]
position = Vector2( -30494.3, 6465.66 )
scale = Vector2( 1, 1 )

[node name="Vastane_Roheline5" parent="Vastased_Roheline" instance=ExtResource( 19 )]
position = Vector2( -46598.1, 34.7656 )
scale = Vector2( 1, 1 )

[node name="Vastane_Roheline6" parent="Vastased_Roheline" instance=ExtResource( 19 )]
position = Vector2( -56961.9, -2091.15 )
scale = Vector2( 1, 1 )

[node name="Vastane_Roheline_CP juures" parent="Vastased_Roheline" instance=ExtResource( 19 )]
position = Vector2( -65379.4, 1123.42 )
scale = Vector2( 1, 1 )

[node name="Vastane_Roheline7" parent="Vastased_Roheline" instance=ExtResource( 19 )]
position = Vector2( -83164, 6465.66 )
scale = Vector2( 1, 1 )

[node name="Vastane_Roheline8" parent="Vastased_Roheline" instance=ExtResource( 19 )]
position = Vector2( -99905.5, 2851.59 )
scale = Vector2( 1, 1 )

[node name="Vastane_Roheline9" parent="Vastased_Roheline" instance=ExtResource( 19 )]
position = Vector2( -108197, 566.234 )
scale = Vector2( 1, 1 )

[node name="Vastane_Roheline10" parent="Vastased_Roheline" instance=ExtResource( 19 )]
position = Vector2( -125098, 3436.22 )
scale = Vector2( 1, 1 )

[node name="Vastane_Roheline11" parent="Vastased_Roheline" instance=ExtResource( 19 )]
position = Vector2( -131316, -443.578 )
scale = Vector2( 1, 1 )

[node name="Fall_Checkpoint_1" type="Area2D" parent="."]
position = Vector2( 7656.39, 1090.94 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Fall_Checkpoint_1"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fall_Checkpoint_1"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Checkpoint_red1" parent="." instance=ExtResource( 3 )]
position = Vector2( 3721.56, 541.903 )

[node name="Checkpoint_green1" parent="." instance=ExtResource( 12 )]
visible = false
position = Vector2( 3730.46, 781.327 )

[node name="Checkpoint_red2" parent="." instance=ExtResource( 11 )]
position = Vector2( 7261.35, 657.017 )

[node name="Checkpoint_green2" parent="." instance=ExtResource( 13 )]
visible = false
position = Vector2( 7279.11, 785.903 )

[node name="Checkpoint_red3" parent="." instance=ExtResource( 10 )]
position = Vector2( 10828.3, 660.711 )

[node name="Checkpoint_green3" parent="." instance=ExtResource( 14 )]
visible = false
position = Vector2( 11784.8, 785.846 )

[node name="Checkpoint_red4" parent="." instance=ExtResource( 22 )]
position = Vector2( 14314.8, 613.892 )

[node name="Checkpoint_green" parent="." instance=ExtResource( 21 )]
position = Vector2( 14320.8, 675.642 )

[node name="Checkpoint_red5" parent="." instance=ExtResource( 23 )]
position = Vector2( 15253, 597.708 )

[node name="CP1" type="Position2D" parent="."]
position = Vector2( 3877.99, 811.591 )

[node name="CP2" type="Position2D" parent="."]
position = Vector2( 7402.33, 700.833 )

[node name="CP3" type="Position2D" parent="."]
position = Vector2( 11794.5, 576.385 )

[node name="Audio Effects" type="Node" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audio Effects"]
position = Vector2( -3.36768, -13.4722 )
stream = ExtResource( 15 )
volume_db = -20.129
autoplay = true
